--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -3,11 +3,9 @@ title: "Where do I find &hellip; ?"
 sidebar: validmind-training
 ---
 
-Here's what we have been asked about {{< var vm.product >}} during training sessions. 
+Here's what we have been asked about {{< var vm.product >}} during training sessions.
 
 ## Answers by topic
-
-<!-- DON'T EVEN *THINK* ABOUT PUTTING A PINK BOX AROUND THIS TEXT. :-) -->
 
 ### Model inventory
 
@@ -44,7 +42,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/administrator-fundamentals/administrator-fundamentals.html#/section-4){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-13){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd){.button-small}
 :::
 
 ::::
@@ -56,7 +54,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/administrator-fundamentals/administrator-fundamentals.html#/section-6){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-9){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd){.button-small}
 :::
 
 ::::
@@ -68,7 +66,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/administrator-fundamentals/administrator-fundamentals.html#/section-4){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-15){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
 :::
 
 ::::
@@ -80,7 +78,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/administrator-fundamentals/administrator-fundamentals.html#/section-4){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-groups.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-7){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-groups.qmd){.button-small}
 :::
 
 ::::
@@ -94,7 +92,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/administrator-fundamentals/administrator-fundamentals.html#/section-12){.button-small} [{{< fa book-open >}} docs](/guide/model-workflows/working-with-model-workflows.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/validmind-for-model-risk-management.html#/set-up-workflows){.button-small} [{{< fa book-open >}} docs](/guide/model-workflows/working-with-model-workflows.qmd){.button-small}
 :::
 
 ::::
@@ -106,7 +104,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/administrator-fundamentals/administrator-fundamentals.html#/section-12){.button-small} [{{< fa book-open >}} docs](/guide/model-workflows/setting-up-model-workflows.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/validmind-for-model-risk-management.html#/set-up-workflows){.button-small} [{{< fa book-open >}} docs](/guide/model-workflows/setting-up-model-workflows.qmd){.button-small}
 :::
 
 ::::
@@ -182,7 +180,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/developer-fundamentals/learning-to-run-tests.html#/section-8){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/working-with-model-documentation.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/learning-to-run-tests.html#/section-8){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/working-with-model-documentation.qmd){.button-small}
 :::
 
 ::::
@@ -194,7 +192,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/developer-fundamentals/finalizing-model-documentation.html#/section-4){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/finalizing-model-documentation.html#/section-4){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
 :::
 
 ::::
@@ -208,7 +206,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/developer-fundamentals/implementing-custom-tests.html#/section-5){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/section-5){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
 :::
 
 ::::
@@ -220,7 +218,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/developer-fundamentals/implementing-custom-tests.html#/section-9){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/section-9){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
 :::
 
 ::::
@@ -234,7 +232,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/validator-fundamentals/using-validmind-for-model-validation.html#/section-7){.button-small} [{{< fa book-open >}} docs](/guide/model-validation/preparing-validation-reports.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/validator-fundamentals/using-validmind-for-model-validation.html#/section-7){.button-small} [{{< fa book-open >}} docs](/guide/model-validation/preparing-validation-reports.qmd){.button-small}
 :::
 
 ::::
@@ -246,7 +244,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](https://docs.validmind.ai/training/validator-fundamentals/finalizing-validation-reports.html#/section-12){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/validator-fundamentals/finalizing-validation-reports.html#/section-12){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
 :::
 
 ::::
