--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -4,6 +4,7 @@ subtitle: For {{< var vm.product >}}
 date: last-modified
 aliases: 
   - training-for-administrators.html
+  - administrator-fundamentals.html
 listing:
   - id: administrator-modules
     type: grid
