--- a/site/training/developer-fundamentals/developer-fundamentals-register.qmd
+++ b/site/training/developer-fundamentals/developer-fundamentals-register.qmd
@@ -4,6 +4,7 @@ subtitle: For {{< var vm.product >}}
 date: last-modified
 aliases: 
   - training-for-model-developers.html
+  - developer-fundamentals.html
 listing:
   - id: developer-modules
     type: grid
