--- a/site/training/validator-fundamentals/validator-fundamentals-register.qmd
+++ b/site/training/validator-fundamentals/validator-fundamentals-register.qmd
@@ -4,6 +4,7 @@ subtitle: For {{< var vm.product >}}
 date: last-modified
 aliases:
   - training-for-model-validators.html
+  - validator-fundamentals.html
 listing:
   - id: validator-modules
     type: grid
