--- a/site/guide/configuration/_add-groups.qmd
+++ b/site/guide/configuration/_add-groups.qmd
@@ -1,3 +1,4 @@
+:::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 1. Under User Permissions, select **Groups**.
@@ -11,3 +12,25 @@
 1. Click **{{< fa check >}} Create Group** to save.
 
     Confirm that the new group is created and appears in the list of available groups in alphabetical order.
+
+::::
+
+
+<!-- VISIBLE IN TRAINING SLIDES ONLY -->
+
+:::: {.content-hidden unless-format="revealjs"}
+a. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+a. Under User Permissions, select **Groups**.
+
+a. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
+
+a. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
+
+a. Select users from the list to add them to the group.
+
+a. Click **{{< fa check >}} Create Group** to save.
+
+    Confirm that the new group is created and appears in the list of available groups in alphabetical order.
+
+::::
