--- a/site/guide/configuration/manage-groups.qmd
+++ b/site/guide/configuration/manage-groups.qmd
@@ -53,35 +53,7 @@ You can only remove non-default groups.
 
 ## Add or remove group members
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under User Permissions, select **Groups**.
-
-::: {.panel-tabset}
-
-#### Add members
-
-a. Click **{{< fa chevron-right >}} See Details**.
-
-b. Click **{{< fa plus >}} Add New Member**.
-
-c. Select members by checking the boxes next to their names in the pop-up.
-
-d. Click **{{< fa plus >}} Add to Group**.
-
-   Confirm that the new member is added to the correct group.
-
-#### Remove members
-
-a. Click **{{< fa chevron-right >}} See Details**.
-
-b. Select members to be removed from the group by checking the boxes next to their names.
-
-c. Click **{{< fa user-minus >}} Remove Member**.
-
-   After you confirm, the user will be removed from that group.
-
-:::
+{{< include /guide/configuration/_add-remove-group-members.qmd >}}
 
 
 <!-- FOOTNOTES -->
