--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -248,7 +248,17 @@ Manage user groups
 
 {{< include /guide/configuration/_user-groups.qmd >}}
 
+::: {.panel-tabset}
+
+#### 1. Add groups
+
 {{< include /guide/configuration/_add-groups.qmd >}}
+
+#### 2. Add users to groups
+
+{{< include /guide/configuration/_add-remove-group-members.qmd >}}
+
+:::
 
 :::
 
