--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -16,7 +16,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa book-open >}} docs](/guide/model-inventory/configure-model-interdependencies.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/configure-inventory-fields){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/configure-model-interdependencies.qmd){.button-small}
 :::
 
 ::::
@@ -28,7 +28,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa book-open >}} docs](/guide/model-inventory/manage-model-inventory-fields.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/configure-inventory-fields){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/manage-model-inventory-fields.qmd){.button-small}
 :::
 
 ::::
@@ -116,7 +116,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/validmind-for-model-risk-management.html#/set-up-workflows){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
 :::
 
 ::::
@@ -130,7 +130,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa book-open >}} docs](/guide/templates/customize-documentation-templates.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/customize-reusable-templates){.button-small} [{{< fa book-open >}} docs](/guide/templates/customize-documentation-templates.qmd){.button-small}
 :::
 
 ::::
@@ -142,7 +142,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa book-open >}} docs](/guide/templates/customize-documentation-templates.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/customize-reusable-templates){.button-small} [{{< fa book-open >}} docs](/guide/templates/customize-documentation-templates.qmd){.button-small}
 :::
 
 ::::
@@ -168,7 +168,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa book-open >}} docs](/guide/model-inventory/register-models-in-inventory.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/using-validmind-for-model-development.html#/register-a-model){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/register-models-in-inventory.qmd){.button-small}
 :::
 
 ::::
@@ -192,7 +192,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/developer-fundamentals/finalizing-model-documentation.html#/section-4){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/finalizing-model-documentation.html#/submit-documentation-for-approval){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
 :::
 
 ::::
@@ -206,7 +206,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/section-5){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/implement-custom-tests){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
 :::
 
 ::::
@@ -232,7 +232,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/validator-fundamentals/using-validmind-for-model-validation.html#/section-7){.button-small} [{{< fa book-open >}} docs](/guide/model-validation/preparing-validation-reports.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/validator-fundamentals/finalizing-validation-reports.html#/refine-validation-report){.button-small} [{{< fa book-open >}} docs](/guide/model-validation/preparing-validation-reports.qmd){.button-small}
 :::
 
 ::::
@@ -244,7 +244,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/validator-fundamentals/finalizing-validation-reports.html#/section-12){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/validator-fundamentals/finalizing-validation-reports.html#/submit-report-for-approval){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/submit-for-approval.qmd){.button-small}
 :::
 
 ::::
