--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -16,7 +16,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/configure-inventory-fields){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/configure-model-interdependencies.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/configure-inventory-fields){.button-small} [{{< fa book-open >}} docs](/guide/model-inventory/manage-model-inventory-fields.qmd){.button-small}
 :::
 
 ::::
@@ -54,7 +54,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-9){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-users.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/onboarding-your-organization.html#/section-9){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
 :::
 
 ::::
@@ -92,7 +92,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/validmind-for-model-risk-management.html#/set-up-workflows){.button-small} [{{< fa book-open >}} docs](/guide/model-workflows/working-with-model-workflows.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/validmind-for-model-risk-management.html#/set-up-workflows){.button-small} [{{< fa book-open >}} docs](/guide/model-workflows/setting-up-model-workflows.qmd){.button-small}
 :::
 
 ::::
@@ -116,7 +116,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/validmind-for-model-risk-management.html#/set-up-workflows){.button-small} [{{< fa book-open >}} docs](/guide/configuration/manage-roles.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/validmind-for-model-risk-management.html#/set-up-workflows){.button-small}  [{{< fa book-open >}} docs](/guide/model-workflows/setting-up-model-workflows.qmd){.button-small}
 :::
 
 ::::
@@ -142,7 +142,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/customize-reusable-templates){.button-small} [{{< fa book-open >}} docs](/guide/templates/customize-documentation-templates.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/administrator-fundamentals/customizing-your-model-inventory.html#/customize-reusable-templates){.button-small} [{{< fa book-open >}} docs](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb#include-custom-test-results){.button-small}
 :::
 
 ::::
@@ -180,7 +180,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/developer-fundamentals/learning-to-run-tests.html#/section-8){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/working-with-model-documentation.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/learning-to-run-tests.html#/section-8){.button-small} [{{< fa book-open >}} docs](/notebooks/quickstart/quickstart_model_documentation.ipynb){.button-small}
 :::
 
 ::::
@@ -206,7 +206,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/implement-custom-tests){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/implement-custom-tests){.button-small} [{{< fa book-open >}} docs](/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb){.button-small}
 :::
 
 ::::
@@ -218,7 +218,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 :::
 
 ::: {.w-40-ns .nb3 .pl2}
-[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/section-9){.button-small} [{{< fa book-open >}} docs](/guide/model-documentation/work-with-test-results.qmd){.button-small}
+[{{< fa graduation-cap >}} training](/training/developer-fundamentals/implementing-custom-tests.html#/section-9){.button-small} [{{< fa book-open >}} docs](/notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb){.button-small}
 :::
 
 ::::
@@ -275,7 +275,9 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 
 ::::
 
-:::: {.flex .flex-wrap .justify-around}
+<!-- BELOW FUNCTIONALITY DOESN'T EXIST!! -->
+
+<!-- :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns .nb3 .pr2}
 - How do I schedule quarterly/monthly runs?
@@ -285,7 +287,7 @@ Here's what we have been asked about {{< var vm.product >}} during training sess
 [{{< fa book-open >}} docs](/guide/monitoring/work-with-metrics-over-time.qmd){.button-small}
 :::
 
-::::
+:::: -->
 
 ### Data management
 
