--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -13,7 +13,7 @@ listing:
       - review-attestation-questionnaires.qmd
 ---
 
-Attestation enables model owners and validators to formally certify, review, and sign off on model attributes at specific points in time, supporting compliance and governance processes. 
+{{< include /guide/attestation/_attestations.qmd >}}
 
 ::: {.attn}
 
