--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -45,7 +45,7 @@ This final module is part of a four-part series:
 ::: {.f2}
 1. [Audit model activity](#audit-model-activity)
 2. [Audit model workflows](#audit-model-workflows)
-3. [Working with analytics](#working-with-analytics)
+3. [Work with analytics](#work-with-analytics)
 
 :::
 
@@ -191,7 +191,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Working with analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Work with analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
@@ -338,6 +338,7 @@ Organizational oversight & reporting
 In this final module, you learned how to:
 
 - [x] Track updates on models
+- [x] Review workflows and workflow history on models
 - [x] Navigate the analytics dashboard
 - [x] Create custom report dashboards and visualizations
 
