--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -46,7 +46,7 @@ This third module is part of a four-part series:
 1. [{{< var vm.product >}} for model risk management](#validmind-for-model-risk-management)
 2. [Set up custom workflows](#set-up-workflows)
 3. [Manage model workflows](#manage-model-workflows)
-4. [Set up attestations](#set-up-attestations)
+4. [Configure attestations](#configure-attestations)
 
 :::
 
@@ -91,7 +91,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
-# ValidMind for model risk management {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# ValidMind for model risk management* {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 # Set up workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -373,7 +373,105 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Set up attestations {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Configure attestations {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Work with attestations
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/attestation/working-with-attestations.qmd){.button target="_blank"}
+:::
+
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/attestation/_attestations.qmd >}}
+
+::: {.panel-tabset}
+
+#### Attestation periods
+
+Attestation periods are typically scheduled quarterly or annually and should be configured to align with regulatory or internal review cycles.
+
+#### Attestation fields
+
+By default, attestations include the model name. Add additional model inventory fields as needed.
+
+#### Questionnaires
+
+Attestation questionnaires should confirm that key controls, governance processes, and documentation requirements have been followed.
+
+:::
+
+:::
+
+<br>Learn how to **set up attestations** on the next page. {{< fa hand-point-right >}}
+
+
+::::
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Set up attestations
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/attestation/set-up-attestations.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+::: {.panel-tabset}
+
+#### 1. Add attestations
+
+{{< include /guide/attestation/_add-attestations.qmd >}}
+
+#### 2. Configure attestations
+
+{{< include /guide/attestation/_configure-attestations.qmd >}}
+
+:::
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/attestations" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--l .three-quarters .auto-collapse-10}
+::: {.tc}
+**Set up an attestation**
+:::
+
+1. Click **{{< fa plus >}} Add Attestation**.
+2. Enter a **[name]{.smallcaps}** and **[description]{.smallcaps}** for the attestation.
+3. Click on the name of the attestation you added to configure it:
+  - Click **{{< fa plus >}} Add Attestation Period** and add a period.
+  - Under Relevant Attestation Fields, drag **Relevant Attestation Fields** to display in model snapshots.
+  - Under Questionnaire Template, click the template area to edit.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -390,6 +488,7 @@ In this third module, you learned how to:
 
 - [x] Use {{< var vm.product >}} to oversee your entire MRM lifecycle
 - [x] Set up model stages and custom workflows
+- [x] Manage and review workflows on models
 - [x] Set up and schedule attestations
 
 :::
