--- a/site/guide/attestation/set-up-attestations.qmd
+++ b/site/guide/attestation/set-up-attestations.qmd
@@ -35,103 +35,11 @@ Setting up attestations involves adding an attestation, configuring the attestat
 
 ## Add attestations
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Workspace, select **Attestations**.
-
-3. Click **{{< fa plus >}} Add New Attestation**.
-
-4. Enter a name for the attestation.
-
-5. Enter a description.
-
-6. Click **Add Attestation**.
-
-7. [Configure the attestation](#configure-attestations).
+{{< include /guide/attestation/_add-attestations.qmd >}}
 
 ## Configure attestations
 
-### Add attestation periods
-
-Attestation periods are typically scheduled quarterly or annually and should be configured to align with regulatory or internal review cycles: 
-
-::: {.column-margin .callout}
-
-### Tips
-
-- **Avoid overlap** — Only one attestation period can be active at a time.
-- **Schedule individually** — You cannot schedule recurring attestation periods.
-
-___
-
-<!-- TO DO: Confirm with Steven -->
-Attestation periods reflect the time zone of the user setting up attestation and they trigger in the time zone of the model owner. 
-
-:::
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Workspace, select **Attestations** and then click an attestation to configure.
-
-3. Click **{{< fa plus >}} Add Attestation Period**.
-
-4. Enter a name for the attestation period, such as `Quarterly attestation`.
-
-5. Set the start date for the attestation period.
-
-6. Set the end date when the attestation period ends.
-
-7. Click **Add Period**.
-
- When the attestation period begins, the system triggers the process automatically. Model owners are then notified via a banner on their dashboard prompting them to complete the attestation questionnaire.
-
-### Add attestation fields
-
-By default, attestations include the model name. Add additional model inventory fields as needed:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Workspace, select **Attestations** and then click an attestation to configure.
-
-3. Under **Relevant Attestation Fields**, drag model inventory fields between columns:
-
-   - **Model Inventory Fields** — Available fields from the model inventory
-   - **Relevant Attestation Fields** — Selected fields to display in model snapshots
-
-3. Optional: Reorder the fields to change how they display in the attestation.
-
-### Edit questionnaire templates
-
-Attestation questionnaires should confirm that key controls, governance processes, and documentation requirements have been followed. 
-
-::: {.column-margin .callout}
-
-### Tip
-
-Work with your model risk management team to create a template that accurately reflects your organization's attestation requirements.
-
-___ 
-
-[How do I create meaningful attestation questionnaires?](/guide/attestation/working-with-attestations.qmd#how-do-i-create-meaningful-attestation-questionnaires)
-:::
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Workspace, select **Attestations** and then click the attestation you want to configure.
-
-3. Under **Questionnaire Template**, click the template area to edit. You can add rich text fields such as:
-
-   - Instructions 
-   - Links to guidelines
-   - Checkboxes
-   - Lists 
-   - Other custom elements
-
-   ![A screenshot of the questionnaire template editor](edit-questionnaire-template.gif){width=100% fig-alt="An animation of the questionnaire template editor showing the process of adding a question about documentation of compliance to the template with the instructions to confirm that required documentation, such as model documentation, validation reports, and change logs, has been completed." .screenshot}
-
-4. After you complete your edits, click **Save**.
-
-The attestation questionnaire is now ready to be be used in future attestation instances, to be completed by model owners and reviewed and signed off by validators.
+{{< include /guide/attestation/_configure-attestations.qmd >}}
 
 ## Test attestation schedules
 
