--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -253,7 +253,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Working with templates
+Work with templates
 
 ::: {.tc}
 [Learn more ...](/guide/templates/working-with-templates.qmd){.button target="_blank"}
