--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -91,7 +91,30 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
-# ValidMind for model risk management* {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# ValidMind for model risk management {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+
+## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--r}
+**Welcome back to the {{< var validmind.platform >}}**
+
+The {{< var validmind.platform >}} is more than just a model inventory where your model development and model validation teams collaborate seamlessly and more efficiently — it's also an indispensable tool for model risk management oversight:
+
+- item 1
+- item 1
+
+Without leaving the {{< var validmind.platform >}}, your entire organization
+
+::: {.embed}
+**Can't load the {{< var validmind.platform >}}?**
+
+Make sure you're logged in and have refreshed the page in a Chromium-based browser.
+:::
+
+Click [{{< fa chevron-right >}}]() to learn how to **set up workflows** for your use case.
+
+::::
 
 # Set up workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
