--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -101,10 +101,9 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 The {{< var validmind.platform >}} is more than just a model inventory where your model development and model validation teams collaborate seamlessly and more efficiently — it's also an indispensable tool for model risk management oversight:
 
-- item 1
-- item 1
-
-Without leaving the {{< var validmind.platform >}}, your entire organization
+- Configure workflows to match your organizational needs for every part of your model lifecycles.
+- Set up attestations to support compliance and governance processes.
+- Customize reporting to provide insights tailored to your use cases.
 
 ::: {.embed}
 **Can't load the {{< var validmind.platform >}}?**
