--- a/site/get-started/common-steps/_run-quickstart-notebook.qmd
+++ b/site/get-started/common-steps/_run-quickstart-notebook.qmd
@@ -11,6 +11,9 @@ To initialize the {{< var validmind.developer >}} which connects your environmen
 
    This message verifies that the {{< var vm.developer >}} works as expected as is connected to the correct model and document type within the {{< var vm.platform >}}.
 
+
+<!-- FOOTNOTES -->
+
 [^longnote]:
 
    - Hover over each cell and click the {{< fa circle-play >}} **icon**; OR
