--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -9,11 +9,14 @@
 1. Fields require a [type]{.smallcaps},^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
     - You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
-    - You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^longnote]
+    - You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
 
 1. When you are satisfied with the setup of your field, click **Save**.
 
-[^longnote]:
+
+<!-- ADDITIONAL FOOTNOTES -->
+
+[^edit-fields]:
 
     ::: {.callout title="Leave this field blank to leave permissions as default."}
     - By default, model owners and validators have write access. 
