--- a/site/guide/model-workflows/_add-new-workflows.qmd
+++ b/site/guide/model-workflows/_add-new-workflows.qmd
@@ -12,14 +12,17 @@ To add a new blank workflow:
 1. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
     - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows)]
-    - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^longnote]
+    - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^add-workflows]
     - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)]
 
 1. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
 1. Click **Add Workflow** to save your blank workflow, and then [configure your workflow steps](/guide/model-workflows/configure-model-workflows.qmd#configure-workflow-steps).
 
-[^longnote]:
+
+<!-- ADDITIONAL FOOTNOTES -->
+
+[^add-workflows]:
 
     ::: {.callout title="Please note that only one workflow can be configured to initiate on model registration."}
     <br>
