--- a/site/guide/model-workflows/_workflow-step-types.qmd
+++ b/site/guide/model-workflows/_workflow-step-types.qmd
@@ -33,7 +33,7 @@ Creates a button that performs an action on behalf of the user.
 |---:|---|
 | [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]  |
 | [action button label]{.smallcaps} | Text that displays on your action button. |
-| [request fields]{.smallcaps} (optional) | Include required inventory fields alongside your action.[^longnote1]  |
+| [request fields]{.smallcaps} (optional) | Include required inventory fields alongside your action.[^step-types-1]  |
 : **{{< fa arrow-pointer >}} User Action v2** step configuration {.hover tbl-colwidths="[40,60]"}
 
 #### {{< fa users >}} Approval
@@ -41,7 +41,7 @@ Creates a button that performs an action on behalf of the user.
 When your workflow reaches the approval step, roles or users in the selected **[approval group]{.smallcaps}** will receive a preconfigured message.
 
 - Select from either **User Roles**, **Model Stakeholder Types**,or either **User Role** or **User Type** inventory field.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
-- Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^longnote2]
+- Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^step-types-2]
 
 | Field | Description |
 |---:|---|
@@ -106,12 +106,12 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
 <!-- ADDITIONAL FOOTNOTES -->
 
-[^longnote1]:
+[^step-types-1]:
 
     - Select the field, then click **{{< fa plus >}} Add Field** to insert.
     - [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
 
-[^longnote2]: **[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd#create-custom-workflows):**<br><br>
+[^step-types-2]: **[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd#create-custom-workflows):**<br><br>
 
     1. Configure two **{{< fa cube >}} Model Stage Change** steps for your associated rejection and approval stages.
     2. Then, from the bottom of your **{{< fa users >}} Approval** step:
