--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -111,7 +111,7 @@ The {{< var validmind.platform >}} is more than just a model inventory where you
 Make sure you're logged in and have refreshed the page in a Chromium-based browser.
 :::
 
-Click [{{< fa chevron-right >}}]() to learn how to **set up workflows** for your use case.
+Let's continue our journey by learning how to **set up workflows** for your use case on the next pages. {{< fa hand-point-right >}}
 
 ::::
 
