--- a/site/guide/model-workflows/_initiate-model-workflows.qmd
+++ b/site/guide/model-workflows/_initiate-model-workflows.qmd
@@ -3,7 +3,7 @@
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
 :::
 
-To manually start a workflow[^longnote] for a specific model:
+To manually start a workflow[^initiate-workflows] for a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -34,12 +34,13 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 
 1. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
 
-<!-- FOOTNOTES -->
 
-[^longnote]:
+<!-- ADDITIONAL FOOTNOTES -->
+
+[^initiate-workflows]:
 
     ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
-    Refer to [Configure custom workflows](configure-model-workflows.qmd) for more details.
+    Refer to [Configure custom workflows](/guide/model-workflows/configure-model-workflows.qmd) for more details.
     :::
 
 ::::
